<resources>
    <string name="app_name">HealthyLife</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="email_address">Email address</string>
    <string name="reset_password">Reset Password</string>
    <string name="personal_info">Personal Info</string>
    <string name="gender">Gender</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="birthday">Birthday</string>
    <string name="what_is_your_goal">What is your goal?</string>
    <string name="lose_weight">Lose weight</string>
    <string name="stay_form">Stay form</string>
    <string name="gain_weight">Gain weight</string>
    <string name="cont"><![CDATA[Contınue >]]></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="activity_level">Activity Level</string>
    <string name="title_activity_personal_info1">PersonalInfo1</string>
    <string-array name="activity_level">
        <item>VERY LOW </item>
        <item>LOW</item>
        <item>NORMAL</item>
        <item>HIGH</item>
        <item>VERY HIGH</item>
    </string-array>
    <string name="height">Height</string>
    <string name="current_weight">Current Weight</string>
    <string name="target_weight">Target Weight</string>
    <string name="_170">170</string>
    <string name="_60">60</string>
    <string name="_55">55</string>
    <string name="go"><![CDATA[>]]></string>
    <string name="settings">Settings</string>
    <string name="_0_kcal_burnt">0 kcal burnt</string>
    <string name="_0_ml">0 ml</string>
    <string name="_0_kcal_taken">0 kcal taken</string>
    <string name="current_55">Current: 55</string>
    <string name="_0_kg_left_to_target">0 kg left to target</string>
    <string name="_0_kcal">0 kcal</string>
    <string name="target">Target</string>
    <string name="consumed">Consumed</string>
    <string name="daily_calorie_intake">Daily Calorie Intake</string>
    <string name="log_out">LOG OUT</string>
    <string name="change_goals_and_personal_information">Change goals and personal information</string>
    <string name="cancel">Cancel</string>
    <string name="subm_t">Submıt</string>
    <string name="total">TOTAL:</string>
    <string name="_0_kcal_">0 KCAL</string>
    <string name="statistics">Statistics</string>
    <string name="add_new_food">Add new food</string>
    <string name="egg_boiled">Egg (Boiled)</string>
    <string name="_72_kcal_1piece">72 kcal - 1 piece</string>
    <string name="scrambled_egg">Scrambled Egg</string>
    <string name="egg_sunny_side_up">Egg (Sunny Side Up)</string>
    <string name="egg_omelette">Egg (Omelette)</string>
    <string name="poached_egg">Poached Egg</string>
    <string name="add">ADD</string>
    <string name="_1">1</string>
    <string name="today_total">Today Total</string>
    <string name="add_new_activity">Add new activity</string>
    <string-array name="material_select">
        <item>piece </item>
        <item>tablespoon(ts)</item>
        <item>soup ladle</item>
        <item>water glass</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basketball_high_paced">Basketball (High-paced)</string>
    <string name="basketball_low_paced">Basketball (Low-paced)</string>
    <string name="_400_kcal_1_hour">400 kcal - 1 hour</string>
    <string name="search">Search</string>
    <string-array name="time_select">
        <item>hour </item>
        <item>minutes</item>
    </string-array>
</resources>