<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GoalPage">

    <Button
        android:id="@+id/backbutton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/back"
        android:background="@color/material_on_background_disabled"
        android:layout_marginStart="5dp" />

    <TextView
        android:id="@+id/personalInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_info"
        android:textColor="@android:color/background_dark"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/background_dark"
        android:text="@string/gender" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"

        >

        <RadioButton
            android:id="@+id/radioBtnMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp" />

        <RadioButton
            android:id="@+id/radioBtnWoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/woman" />
    </RadioGroup>

    <TextView
    android:id="@+id/brthdy"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:text="@string/birthday"
    android:textColor="@android:color/background_dark"
    android:textSize="20sp"
    android:textStyle="bold" />

    <EditText
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="1/1/1999"
        android:inputType="date" />


    <TextView
        android:id="@+id/activity_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/activity_level"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/act_spinner"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:entries="@array/activity_level" />

    <Button
        android:id="@+id/cont2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="30dp"
        android:text="@string/cont"
        android:layout_marginStart="250dp" />


</LinearLayout>