<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddEggPage">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/backbutton8"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/material_on_background_disabled"
            android:text="@string/back" />

        <ImageView
            android:id="@+id/egg_photo_pic"
            android:layout_width="254dp"
            android:layout_height="313dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:srcCompat="@mipmap/egg_foreground" />
    </LinearLayout>

    <TextView
        android:id="@+id/egg_boiled_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/egg_boiled"
        android:textStyle="bold"
        android:textColor="@android:color/background_dark" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/number_of_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/_1"
            tools:ignore="TextFields" />

        <Spinner
            android:id="@+id/material_spinner"
            android:layout_width="112dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:entries="@array/material_select" />
    </LinearLayout>
    <TextView
        android:id="@+id/how_much_calorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/background_dark"
        android:text="@string/_0_kcal" />
    <Button
        android:id="@+id/add_egg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:ems="12"
        android:onClick="addEgg"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">
    </Button>


</LinearLayout>