<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddSportPage"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/backbutton14"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/material_on_background_disabled"
            android:text="@string/back" />

        <ImageView
            android:id="@+id/sport_photo"
            android:layout_width="254dp"
            android:layout_height="336dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/sportName_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:textStyle="bold"
        android:textColor="@android:color/background_dark" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >

        <EditText
            android:id="@+id/time_of_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/_1"
            tools:ignore="TextFields" />

        <Spinner
            android:id="@+id/time_spinner"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:entries="@array/time_select" />
</LinearLayout>
    <TextView
        android:id="@+id/how_much_burn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/background_dark"
        android:text="@string/_0_kcal" />
    <Button
        android:id="@+id/add_sport_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:ems="12"
        android:layout_gravity="center"
        android:onClick="addSport"
        android:layout_marginTop="20dp">
    </Button>

</LinearLayout>