<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodStatistics"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/backbutton9"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/material_on_background_disabled"
            android:text="@string/back" />

        <ImageView
            android:id="@+id/food_photo_pic"
            android:layout_width="199dp"
            android:layout_height="162dp"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@mipmap/food_foreground" />
    </LinearLayout>

    <com.jjoe64.graphview.GraphView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/graph_food" />

    <TextView
        android:id="@+id/today_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textColor="@android:color/background_dark"
        android:text="@string/today_total" />
    <TextView
        android:id="@+id/today_total_cal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textColor="@android:color/background_dark"
        android:text="@string/_0_kcal" />

</LinearLayout>