<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeightPage">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/backbutton6"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/material_on_background_disabled"
            android:text="@string/back" />

        <ImageView
            android:id="@+id/weight_photo_pic"
            android:layout_width="216dp"
            android:layout_height="183dp"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@mipmap/settings_foreground"
            android:layout_marginStart="25dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/settings_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:ems="10"
        android:background="@drawable/customborder"
        android:textColor="@android:color/background_dark"
        android:text="Deren" />
    <TextView
        android:id="@+id/settings_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:background="@drawable/customborder"
        android:ems="10"
        android:textColor="@android:color/background_dark"
        android:text="derentoy@gmail.com" />

    <TextView
        android:id="@+id/settings_change_goals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/change_goals_and_personal_information"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/log_out_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/log_out" />

</LinearLayout>